--- a/index.html
+++ b/index.html
@@ -4,39 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Casa Criativa</title>
-    <style>
-      body {
-        background: #e5e5e5;
-        color: #25282b;
-
-        text-align: center;
-      }
-
-      button {
-        color: #ff5e84;
-        border: none;
-
-        font-weight: bold;
-        background: none;
-      }
-
-      .fat {
-        color: white;
-        background-color: #ff5e84;
-      }
-
-      #footer a {
-        color: #25282b;
-        text-decoration: none;
-      }
-      .hide {
-        display: none;
-      }
-    </style>
   </head>
   <body>
-    <img src="./imagens/casa-criativa-logo.png" alt="Casa Criativa Logo" />
+    <img src="./img/casa-criativa-logo.png" alt="Casa Criativa Logo" />
     <p>Ficar em casa em períodos longos, não deve ser nada fácil.</p>
     <p>
       Iremos catalogar ideias,<strong>
